# trip_maker

./: .cta.json  Cargo.toml  LICENSE  README.md  bacon.toml  package-lock.json  package.json  vite.config.ts
common/: Cargo.toml
common/src/: lib.rs
public/: output.css
server/: Cargo.toml
server/src/: main.rs
server/src/trip_advisor/: details.rs  mod.rs  nearby_search.rs  photos.rs  reviews.rs
src/: app.rs  connection.rs  env.ts  location.rs  main.rs  random_location.rs  routeTree.gen.ts  router.tsx  state.rs  utils.rs
src/components/: Header.tsx  demo.FormComponents.tsx
src/components/ui/: button.tsx  select.tsx  switch.tsx
src/routes/: __root.tsx  index.tsx  login.tsx  mod.rs
src/routes/root/: mod.rs  set_location.js
src/routes/root/partials/: generate.rs  mod.rs  settings.rs  settings_form.rs
src/trip_advisor/: details.rs  mod.rs  nearby_search.rs  photos.rs  reviews.rs
