[package]
name = "trip_maker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
directories = "6.0.0"
eframe = { version = "0.33.3", features = ["persistence"] }
longitude = { version = "0.2.2", features = ["serde"] }
open = "5.3.3"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["blocking", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
common = { path = "./common" }
public-ip-address = { version = "0.4.0", features = ["blocking"] }
tarpc = { version = "0.37.0", features = ["serde-transport", "tcp"] }
tokio-serde = { version = "0.9.0", features = ["cbor"] }
tokio = { version = "1.49.0", features = ["full"] }

[workspace]
members = ["common", "server"]
