[package]
name = "trip_maker"
version = "0.2.0"
edition = "2024"

[dependencies]
longitude = { version = "0.2.2", features = ["serde"] }
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["blocking", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
clap = { version = "4.5.55", features = ["env", "derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
dotenvy = "0.15.7"
url = "2.5.8"
serde_url_params = "0.2.1"
axum = "0.8.8"
thiserror = "2.0.18"
axum-htmx = { version = "0.8.1", features = ["auto-vary", "guards"] }
maud = { version = "0.27.0", features = ["axum"] }
