[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive", "env"] }
common = { path = "../common" }
dotenvy = "0.15.7"
futures = "0.3.31"
longitude = "0.2.2"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json", "query"] }
tarpc = { version = "0.37.0", features = ["full"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["cbor"] }
serde_repr = "0.1.20"
serde_url_params = "0.2.1"
url = "2.5.8"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing-subscriber = "0.3.22"
tracing = "0.1.44"
